# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import authRouter from "./auth";
 import productsRouter from "./products";
 import cartRouter from "./cart";
+import savedCartRouter from "./saved-cart";
 import wishlistRouter from "./wishlist";
 import ordersRouter from "./orders";
 import emailRouter from "./email";
@@ -16,6 +17,7 @@ router.use(healthRouter);
 router.use(authRouter);
 router.use(productsRouter);
 router.use(cartRouter);
+router.use(savedCartRouter);
 router.use(wishlistRouter);
 router.use(ordersRouter);
 router.use(emailRouter);
