# lib/db/src/schema/index.ts
@@ -2,6 +2,7 @@ export * from "./users";
 export * from "./products";
 export * from "./product-variants";
 export * from "./cart";
+export * from "./saved-cart";
 export * from "./wishlist";
 export * from "./orders";
 export * from "./email-signups";
